# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/api/: api_router.py
app/api/v1/liveness/: liveness_models.py  liveness_routes.py
app/api/v1/readiness/: readiness_models.py  readiness_routes.py
app/api/v1/zen/: zen_models.py  zen_routes.py
app/config/: app_config.py  app_init.py
app/config/properties/: app_settings.py
app/config/setup/: logging_setup.py
app/utils/logging_utils/: logging_helpers.py
conf/: start.sh  test_runner.sh
conf/docker/: image.service.yaml  image.testing.yaml  service.deployed.dev.yaml  service.local.dev.yaml  testing.local.dev.yaml
tests/e2e/: conftest.py  test_liveness_routes.py  test_readiness_routes.py  test_zen_routes.py
tests/unit/: test_app_init.py
