[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Poetry specification for library dependencies"
authors = ["Kyle Clark <github.com/kyleaclark>"]

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "~0.85.1"
gunicorn = "^20.1.0"
python-json-logger = "^2.0.4"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "~0.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"